--- a/dscan/privacy.html
+++ b/dscan/privacy.html
@@ -1,32 +1,76 @@
-Kebijakan Privasi Dscan
+<!DOCTYPE html>
+<html lang="id">
 
-Terakhir diperbarui: 10 July 2024
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kebijakan Privasi Dscan</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+        }
 
-Kami di Dscan menghargai privasi Anda dan berkomitmen untuk melindungi data Anda. Kebijakan Privasi ini menjelaskan bagaimana kami menangani data yang Anda berikan saat menggunakan aplikasi kami.
+        h1,
+        h2 {
+            color: #2c3e50;
+        }
 
-1. Informasi yang Kami Kumpulkan
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
 
-a. Informasi Pemindaian: Data yang dipindai menggunakan aplikasi Dscan, termasuk teks, gambar, atau dokumen, akan diproses hanya untuk tujuan membuat file PDF dan tidak disimpan di server kami.
+        li {
+            margin-bottom: 10px;
+        }
+    </style>
+</head>
 
-b. Data Penggunaan: Kami dapat mengumpulkan informasi tentang cara Anda berinteraksi dengan aplikasi kami, seperti jenis perangkat dan statistik penggunaan, untuk meningkatkan layanan kami.
+<body>
+    <h1>Kebijakan Privasi Dscan</h1>
+    <p>Terakhir diperbarui: 10 July 2024</p>
+    <p>Kami di Dscan menghargai privasi Anda dan berkomitmen untuk melindungi data Anda. Kebijakan Privasi ini
+        menjelaskan bagaimana kami menangani data yang Anda berikan saat menggunakan aplikasi kami.</p>
+    <h2>1. Informasi yang Kami Kumpulkan</h2>
+    <ul>
+        <li>
+            <strong>a. Informasi Pemindaian:</strong> Data yang dipindai menggunakan aplikasi Dscan, termasuk teks,
+            gambar, atau dokumen, akan diproses hanya untuk tujuan membuat file PDF dan tidak disimpan di server kami.
+        </li>
+        <li>
+            <strong>b. Data Penggunaan:</strong> Kami dapat mengumpulkan informasi tentang cara Anda berinteraksi dengan
+            aplikasi kami, seperti jenis perangkat dan statistik penggunaan, untuk meningkatkan layanan kami.
+        </li>
+    </ul>
+    <h2>2. Penggunaan Informasi</h2>
+    <ul>
+        <li>
+            <strong>a. Penyediaan Layanan:</strong> Informasi yang dikumpulkan dari pemindaian digunakan hanya untuk
+            tujuan membuat file PDF yang diminta oleh pengguna.
+        </li>
+        <li>
+            <strong>b. Analisis dan Penelitian:</strong> Data penggunaan akan dianalisis secara anonim untuk memahami
+            tren penggunaan dan meningkatkan fungsionalitas aplikasi.
+        </li>
+    </ul>
+    <h2>3. Keamanan Informasi</h2>
+    <p>Kami menggunakan langkah-langkah keamanan yang sesuai untuk melindungi informasi yang dipindai dari akses,
+        pengungkapan, atau perusakan yang tidak sah. Namun, perlu diketahui bahwa tidak ada metode transmisi data
+        melalui internet atau metode penyimpanan elektronik yang sepenuhnya aman.</p>
+    <h2>4. Hak Pengguna</h2>
+    <ul>
+        <li>
+            <strong>a. Akses dan Penghapusan:</strong> Data yang dipindai tidak disimpan di server kami, jadi tidak ada
+            informasi pribadi yang dapat diakses atau dihapus.
+        </li>
+    </ul>
+    <h2>5. Perubahan Kebijakan Privasi</h2>
+    <p>Kami dapat memperbarui Kebijakan Privasi ini dari waktu ke waktu. Kami akan memberi tahu Anda tentang perubahan
+        tersebut melalui aplikasi atau melalui email.</p>
+    <h2>6. Kontak</h2>
+    <p>Hubungi kami di <a href="mailto:dimzpurnomo2@gmail.com">dimzpurnomo2@gmail.com</a>.</p>
+</body>
 
-2. Penggunaan Informasi
-
-a. Penyediaan Layanan: Informasi yang dikumpulkan dari pemindaian digunakan hanya untuk tujuan membuat file PDF yang diminta oleh pengguna.
-
-b. Analisis dan Penelitian: Data penggunaan akan dianalisis secara anonim untuk memahami tren penggunaan dan meningkatkan fungsionalitas aplikasi.
-
-3. Keamanan Informasi
-
-Kami menggunakan langkah-langkah keamanan yang sesuai untuk melindungi informasi yang dipindai dari akses, pengungkapan, atau perusakan yang tidak sah. Namun, perlu diketahui bahwa tidak ada metode transmisi data melalui internet atau metode penyimpanan elektronik yang sepenuhnya aman.
-
-4. Hak Pengguna
-
-a. Akses dan Penghapusan: Data yang dipindai tidak disimpan di server kami, jadi tidak ada informasi pribadi yang dapat diakses atau dihapus.
-
-5. Perubahan Kebijakan Privasi
-
-Kami dapat memperbarui Kebijakan Privasi ini dari waktu ke waktu. Kami akan memberi tahu Anda tentang perubahan tersebut melalui aplikasi atau melalui email.
-
-6. Kontak Kami dimzpurnomo2@gmail.com.
-
+</html>
